DB Initialization and Role getAuthorities() method bug fix